# learn_rust

./: gincana.txt
docs/: crates.html  fundamentos.html  index.html  instalacao.html  ownership.html  primeiro-projeto.html  recursos.html  testes.html
docs/css/: style.css
novo_projeto/src/: main.rs
ola_rust/src/: menu.rs
pong-rust/: .gitignore  Cargo.toml
pong-rust/src/game/: ball.rs  game_state.rs  paddle.rs
