[package]
name = "pong-rust"
description = "Jogo Pong em Rust para fins educacionais"
version = "2.0.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "pong-rust"
path = "src/main.rs"

[dependencies]

sdl2 = { version = "0.38.0", features = ["mixer", "ttf", "static-link", "use-vcpkg"] } 
rand = "0.9.2"